--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!--app-html-->
     </div>
     <script type="module" src="/src/main.ts"></script>
-    <script>
+    <!-- <script>
       var _hmt = _hmt || []
       ;(function () {
         var hm = document.createElement('script')
@@ -31,6 +31,6 @@
         var s = document.getElementsByTagName('script')[0]
         s.parentNode.insertBefore(hm, s)
       })()
-    </script>
+    </script> -->
   </body>
 </html>
